<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#535353"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".view.settings.SettingsFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/image_settings" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/video_settings" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/system_settings" />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/imageSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/settings_padding"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/image_hd_quality"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textColor="@color/white_gray"
                android:textStyle="bold"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/hdImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/videoSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:padding="@dimen/settings_padding"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/youtube_app_text"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textColor="@color/white_gray"
                android:textStyle="bold"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/youtubePlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/systemSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:padding="@dimen/settings_padding"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/night_theme_text"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textColor="@color/white_gray"
                android:textStyle="bold"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/system"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>