<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="7dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_text"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/cameraName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rover_text"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/roverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sol_text"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/solNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="text"/>
            </LinearLayout>

            <com.likemagic.nasaphotos.utils.EquilateralImageView
                android:layout_marginTop="10dp"
                android:id="@+id/marsImage"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>